/*
 * Copyright 2024 Sowers, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option go_package = "bosca.io/api/protobuf/content";

import "google/protobuf/timestamp.proto";

package bosca.content;

message Metadata {
  string default_id = 1;

  string id = 2;
  string name = 3;
  string content_type = 4;

  optional string source = 5;

  string language_tag = 6;
  int64 content_length = 7;

  repeated string trait_ids = 11;
  repeated string category_ids = 12;
  repeated string tags = 13;
  map<string, string> attributes = 14;

  google.protobuf.Timestamp created = 20;
  google.protobuf.Timestamp modified = 21;

  string workflow_state_id = 31;
}
